force-app/main/default/objects/ServiceRequestID__c/ServiceRequestID__c.object-meta.xml
<CustomObject>
    <label>ServiceRequestID</label>
    <nameField>
        <label>ServiceRequestID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceRequestID</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>