force-app/main/default/objects/ServiceRequestID__c/fields/PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmount__c</fullName>
    <label>PaymentAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>