force-app/main/default/objects/ServiceRequestID__c/fields/Service_Payment__c.field-meta.xml
<CustomField>
    <fullName>Service_Payment__c</fullName>
    <label>Service Payment</label>
    <referenceTo>Service_Payment__c</referenceTo>
    <relationshipLabel>ServiceRequestID</relationshipLabel>
    <relationshipName>ServiceRequestID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>