force-app/main/default/objects/ServiceRequestID__c/fields/ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceCategory__c</fullName>
    <label>ServiceCategory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>